--- a/cisi543b/homepage/index.html
+++ b/cisi543b/homepage/index.html
@@ -19,11 +19,7 @@
   </head>
 
   <body>
-    <br />
-
-    <div class="alert alert-primary" role="alert">
-      https://ci.powderforward.com/
-    </div>
+    <zzbr />
 
     <div class="alert alert-primary" role="alert">
       Powderforward.com
@@ -33,7 +29,7 @@
       <div class="card-body">
         <a
           href="https://ci.powderforward.com"
-          >CI Suggestions list</a
+          >CI Suggestions list - Stackpole Stratford Powder Metal Plant</a
         >
       </div>
     </div>
