--- a/cisi543b/homepage/index.html
+++ b/cisi543b/homepage/index.html
@@ -28,7 +28,7 @@
     <div class="card">
       <div class="card-body">
         <a
-          href="https://cip.powderforward.com"
+          href="https://ci.powderforward.com"
           >CI Suggestions list - Stackpole Stratford Powder Metal Plant</a
         >
       </div>
