--- a/cisi543b/homepage/index.html
+++ b/cisi543b/homepage/index.html
@@ -22,7 +22,7 @@
     <zzbr />
 
     <div class="alert alert-primary" role="alert">
-      Powderforward.com
+      This is Powderforward.com
     </div>
 
     <div class="card">
